Fix some padding issues on mobile

--- a/src/components/PostLink.module.css
+++ b/src/components/PostLink.module.css
@@ -2,9 +2,13 @@
 
 .link {
   & {
-    padding: 12px 0;
+    padding: 12px 8px;
     display: block;
     border-top: solid 1px var(--border-color);
+  }
+
+  @media (--viewport-4) {
+    padding: 12px 0;
   }
 
   &,
